<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.onboarding.OnBoardingFragment">

    <data>

        <variable
            name="onboardingViewModel"
            type="com.alilbanna.shoestore.AllViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/onBoardingImage"
            android:layout_width="@dimen/zero_width"
            android:layout_height="@dimen/zero_height"
            android:alpha="@dimen/alpha_03"
            android:contentDescription="@string/description"
            android:scaleType="centerCrop"
            android:src="@drawable/onboarding_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@drawable/onboarding_image" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:text="@string/welcome"
            android:textColor="@color/material_dynamic_neutral10"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/onBoardingImage"
            app:layout_constraintVertical_bias="0.765" />

        <TextView
            android:id="@+id/welcomeText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_there_welcome_to_our_shoe_store"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText"
            app:layout_constraintVertical_bias="0.132" />

        <Button
            android:id="@+id/onBoardingButton"
            style="@style/applicationButton"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{() -> onboardingViewModel.goToInstructionStart()}"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

