<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="layoutViewModel"
            type="com.alilbanna.shoestore.AllViewModel" />
    </data>

    <!--
   I have chosen a Constraint-layout because is more easy to build the screen
   and I have add a NestedScrollView because it can be work better to show
   the instructions text with small smart phones.
   -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_150">

        <View
            android:layout_width="@dimen/zero_width"
            android:layout_height="@dimen/zero_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageShoe"
            android:layout_width="@dimen/value_150"
            android:layout_height="@dimen/value_150"
            android:contentDescription="@string/header_image_description"
            android:src="@drawable/model1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameShoe"
            style="@style/applicationText"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_8"
            android:layout_marginTop="@dimen/value_8"
            android:layout_marginRight="@dimen/value_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageShoe"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/shoe_name_Ex" />

        <TextView
            android:id="@+id/nameCompanyList"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/nameShoe"
            app:layout_constraintTop_toBottomOf="@+id/nameShoe"
            tools:text="@string/company_name_Ex" />

        <Button
            android:id="@+id/sizeShoeList"
            android:layout_width="@dimen/value_50"
            android:layout_height="@dimen/value_50"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/enabled_circle"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@+id/nameCompanyList"
            tools:ignore="TextContrastCheck"
            tools:text="@string/nine" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>